Updated 16 files via CloudCannon

--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
 
 <title>About me | Usecue web development</title>
 
-<meta name="description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft...">
+<meta name="description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. This harsh looking website is actually a tribute to the web. I have studied Indus...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -63,14 +63,14 @@
 <meta property="og:url" content="https://www.usecue.com/about/index.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft..."/>
+<meta property="og:description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. This harsh looking website is actually a tribute to the web. I have studied Indus..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="About me" />
 
 <meta name="twitter:url" content="https://www.usecue.com/about/index.html" />
-<meta name="twitter:description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the Technical University in Delft..." />
+<meta name="twitter:description" content="My name is Joost van der Schee and I am a web developer based in Amsterdam. This harsh looking website is actually a tribute to the web. I have studied Indus..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -105,7 +105,9 @@
 
 <h1>About me</h1>
 
-<p>My name is Joost van der Schee and I am a web developer based in Amsterdam. I have studied Industrial Design Engineering at the <a href="/uploads/tudelft.jpg">Technical University in Delft</a> and founded ‘Usecue’ in 2007. My first priority is my family, but my work is absolutely number two. I love what I do, which is building beautiful websites and web applications.</p>
+<p>My name is Joost van der Schee and I am a web developer based in Amsterdam. This harsh looking website is actually <a href="/blog/a-tribute-to-the-web">a tribute to the web</a>.</p>
+
+<p>I have studied Industrial Design Engineering at the <a href="/uploads/tudelft.jpg">Technical University in Delft</a> and founded ‘Usecue’ in 2007. My first priority is my family, but my work is absolutely number two. I love what I do, which is building beautiful websites and web applications.</p>
 
 <p>All websites I build are well-coded and have good SEO. This is reflected by their excellent <a href="/blog/google-lighthouse-score/">Google score</a>, an objective quality measurement of a website. Quality is very important to me. I strongly believe that each job worth doing is worth doing well. Therefore I do not just build these websites, but host them as well. This supply chain integration is the reason I can deliver such high quality.</p>
 
