Updated '404.html' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
 
 <title>404 error | Usecue web development</title>
 
-<meta name="description" content="404 errorDe server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. 404/nul op rekestDe ser...">
+<meta name="description" content="De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. ">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -63,14 +63,14 @@
 <meta property="og:url" content="https://www.usecue.com/404.html"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="404 errorDe server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. 404/nul op rekestDe ser..."/>
+<meta property="og:description" content="De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. "/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="404 error" />
 
 <meta name="twitter:url" content="https://www.usecue.com/404.html" />
-<meta name="twitter:description" content="404 errorDe server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. 404/nul op rekestDe ser..." />
+<meta name="twitter:description" content="De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore. " />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -104,10 +104,9 @@
         <div id="content">
 
 
-<h1 class="english">404 error</h1>
-<p class="english">De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore.</p>
-<h1 class="nederlands">404/nul op rekest</h1>
-<p class="nederlands">De server gaf een 404 foutmelding en gaf nul op rekest (null on request). De pagina die u zocht kan niet worden gevonden. Waarschijnlijk bestaat deze pagina niet meer.</p>
+<h1>404 error</h1>
+
+<p>De server replied with a 404 error. The page you are looking for can not be found. The page probably does not exist anymore.</p>
 
 
 
