--- a/contact/index.html
+++ b/contact/index.html
@@ -49,7 +49,7 @@
 
 <title>Contact | Usecue web development</title>
 
-<meta name="description" content="My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, n...">
+<meta name="description" content="My office is located in Amsterdam (the Netherlands) at Soetendaal 7. I especially love to work for graphic designers and advertising agencies. I do not out-s...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -63,14 +63,14 @@
 <meta property="og:url" content="https://www.usecue.com/contact/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, n..."/>
+<meta property="og:description" content="My office is located in Amsterdam (the Netherlands) at Soetendaal 7. I especially love to work for graphic designers and advertising agencies. I do not out-s..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Contact" />
 
 <meta name="twitter:url" content="https://www.usecue.com/contact/" />
-<meta name="twitter:description" content="My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, n..." />
+<meta name="twitter:description" content="My office is located in Amsterdam (the Netherlands) at Soetendaal 7. I especially love to work for graphic designers and advertising agencies. I do not out-s..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -106,7 +106,7 @@
 
 <h1>Contact</h1>
 
-<p>My office is located in Amsterdam (the Netherlands). I especially love to work for graphic designers and advertising agencies. I do not out-source my work, nor do I hire interns. If you hire me, I will be the one that does the job.</p>
+<p>My office is located in Amsterdam (the Netherlands) at Soetendaal 7. I especially love to work for graphic designers and advertising agencies. I do not out-source my work, nor do I hire interns. If you hire me, I will be the one that does the job.</p>
 
 <p>Have you got a question, or do you need a quote or a fully specified offer? Feel free to send me an email (in English or <a href="/nl">Dutch</a>) at <a href="mailto:joost@usecue.com">joost@usecue.com</a> or call at +31 (0)6 185 189 28. I can also be found on <a href="https://github.com/jhvanderschee">Github</a>, <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a> and <a href="https://www.linkedin.com/in/joost-van-der-schee-4b26682/">Linkedin</a>.</p>
 
