--- a/nl/contact/index.html
+++ b/nl/contact/index.html
@@ -49,7 +49,7 @@
 
 <title>Contact | Usecue web development</title>
 
-<meta name="description" content="Mijn kantoor zit in Amsterdam. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wanneer je mij inhu...">
+<meta name="description" content="Mijn kantoor zit in Amsterdam op Soetendaal 7. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wan...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -63,14 +63,14 @@
 <meta property="og:url" content="https://www.usecue.com/nl/contact/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Mijn kantoor zit in Amsterdam. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wanneer je mij inhu..."/>
+<meta property="og:description" content="Mijn kantoor zit in Amsterdam op Soetendaal 7. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wan..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Contact" />
 
 <meta name="twitter:url" content="https://www.usecue.com/nl/contact/" />
-<meta name="twitter:description" content="Mijn kantoor zit in Amsterdam. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wanneer je mij inhu..." />
+<meta name="twitter:description" content="Mijn kantoor zit in Amsterdam op Soetendaal 7. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wan..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -106,7 +106,7 @@
 
 <h1>Contact</h1>
 
-<p>Mijn kantoor zit in Amsterdam. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wanneer je mij inhuurt ben ik degene die het werk doet.</p>
+<p>Mijn kantoor zit in Amsterdam op Soetendaal 7. Ik werk het liefste voor reclame-/ontwerpbureau’s. Ik out-source mijn werk niet en heb ook geen stagaires. Wanneer je mij inhuurt ben ik degene die het werk doet.</p>
 
 <p>Heb je een vraag, wil je een prijsschatting of juist een volledig uitgewerkte offerte? Twijfel niet. Neem gerust contact op (in het Nederlands of <a href="/">Engels</a>) via <a href="mailto:joost@usecue.com">joost@usecue.com</a> of +31 (0)6 185 189 28. Je kunt mij ook online vinden op de diverse sociale media: <a href="https://github.com/jhvanderschee">Github</a>, <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a> en <a href="https://www.linkedin.com/in/joost-van-der-schee-4b26682/">Linkedin</a>.</p>
 
