--- a/portfolio/transactility/index.html
+++ b/portfolio/transactility/index.html
@@ -49,7 +49,7 @@
 
 <title>transactility | Usecue web development</title>
 
-<meta name="description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. A job that was a perfect fit. They...">
+<meta name="description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout an...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -63,14 +63,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/transactility/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. A job that was a perfect fit. They..."/>
+<meta property="og:description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout an..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="transactility" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/transactility1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/transactility/" />
-<meta name="twitter:description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. A job that was a perfect fit. They..." />
+<meta name="twitter:description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout an..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -166,7 +166,7 @@
 
 <h1 class="large">transactility</h1>
 
-<p>This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. A job that was a perfect fit. They had created a basic layout and I rebuild and fine-tuned their website. The site has a great <a href="/blog/how-to-get-a-100-google-lighthouse-score/">Google Lighthouse score</a> and can be managed fully in the CloudCannon CMS. The first page is quite visually pleasing, but weighs only 260kb.</p>
+<p>This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout and I rebuild and fine-tuned their website in Jekyll. The site has a great <a href="/blog/how-to-get-a-100-google-lighthouse-score/">Google Lighthouse score</a> and can be managed fully in the CloudCannon CMS. The first page is quite visually pleasing, but weighs only 260kb.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
