--- a/nl/portfolio/lucass-amsterdam/index.html
+++ b/nl/portfolio/lucass-amsterdam/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -175,7 +176,7 @@
         <div class="medium">85%</div>
     </div>
     <div>
-        <h3 class="small">Speed index</h3>
+        <h3 class="small">Snelheidsindex</h3>
         <div class="medium">3.2s</div>
     </div>
     <div>
