Updated 10 files via CloudCannon

--- a/nl/portfolio/zonmw/index.html
+++ b/nl/portfolio/zonmw/index.html
@@ -180,7 +180,7 @@
         <div class="medium">3.5s</div>
     </div>
     <div>
-        <h3 class="small">Page weight</h3>
+        <h3 class="small">Paginagrootte</h3>
         <div class="medium">1.5Mb</div>
     </div>
 </div>
