--- a/nl/portfolio/de-babywegwijzer/index.html
+++ b/nl/portfolio/de-babywegwijzer/index.html
@@ -180,7 +180,7 @@
         <div class="medium">1.8s</div>
     </div>
     <div>
-        <h3 class="small">Page weight</h3>
+        <h3 class="small">Paginagrootte</h3>
         <div class="medium">125kb</div>
     </div>
 </div>
