--- a/nl/portfolio/felgen-wie-neu/index.html
+++ b/nl/portfolio/felgen-wie-neu/index.html
@@ -180,7 +180,7 @@
         <div class="medium">3.4s</div>
     </div>
     <div>
-        <h3 class="small">Page weight</h3>
+        <h3 class="small">Paginagrootte</h3>
         <div class="medium">990kb</div>
     </div>
 </div>
