--- a/nl/portfolio/lucass-amsterdam/index.html
+++ b/nl/portfolio/lucass-amsterdam/index.html
@@ -180,7 +180,7 @@
         <div class="medium">3.2s</div>
     </div>
     <div>
-        <h3 class="small">Page weight</h3>
+        <h3 class="small">Paginagrootte</h3>
         <div class="medium">470kb</div>
     </div>
 </div>
