--- a/nl/portfolio/studio-inhout/index.html
+++ b/nl/portfolio/studio-inhout/index.html
@@ -180,7 +180,7 @@
         <div class="medium">1.9s</div>
     </div>
     <div>
-        <h3 class="small">Page weight</h3>
+        <h3 class="small">Paginagrootte</h3>
         <div class="medium">135kb</div>
     </div>
 </div>
