--- a/nl/index.html
+++ b/nl/index.html
@@ -105,6 +105,10 @@
           <li><a href="/nl/contact/">Contact</a></li>
         
     </ul>
+
+    <img src="/img/bananaleft2.svg" id="bananaleft" />
+    <img src="/img/bananaright2.svg" id="bananaright" />
+    
     <div id="innerbody">
         <div id="content">
 
@@ -132,6 +136,7 @@
 
     <div id="lightbox"></div>
     <script src="/js/javascript.js"></script>
+
 
 </body>
 
