--- a/about/index.html
+++ b/about/index.html
@@ -116,7 +116,7 @@
 
 <p>I am a big fan of Jekyll (a website generator). To help fellow Jekyll-enthusiasts, I have launched <a href="http://jekyllcodex.org">jekyllcodex.org</a> and I answer Jekyll-related questions on <a href="http://stackoverflow.com/users/2397550/joosts">Stack Overflow</a>. <a href="https://cloudcannon.com/">CloudCannon</a> (an online CMS for Jekyll) mentioned me as a Jekyll expert on their ‘<a href="https://cloudcannon.com/experts/">experts page</a>’. I was also one of the speakers on <a href="https://jekyllconf.com/">JekyllConf 2019</a>.</p>
 
-<p>Apart from Jekyll/CloudCannon websites I also develop WordPress, Issuu, MailChimp, Shopify and custom web solutions. My latest projects include <a href="https://www.invoicelion.org/">open source invoicing software</a>, called ‘Invoice Lion’, a tool to <a href="https://profilepageimages.usecue.com/">embed your instagram feed</a> on your website, called ‘PPI Loader’ and a <a href="https://www.onlinemagazinemaker.com/">platform for producing online magazines</a>, called ‘Online Magazine Maker’.</p>
+<p>Apart from Jekyll/CloudCannon websites I also develop WordPress, Issuu, MailChimp, Shopify and custom web solutions. My latest projects include <a href="https://www.invoicelion.org/">open source invoicing software</a>, called ‘Invoice Lion’, a tool to publish your <a href="https://profilepageimages.usecue.com/">instagram feed on your website</a>, called ‘PPI Loader’ and a <a href="https://www.onlinemagazinemaker.com/">platform for creating online magazines</a>, called ‘Online Magazine Maker’.</p>
 
 <p> </p>
 
