--- a/portfolio/la-manzanilla/index.html
+++ b/portfolio/la-manzanilla/index.html
@@ -201,7 +201,7 @@
             
             <a id="nextlink" href="/portfolio/studio-inhout/">next<span class="desktop">: studio inHout</span><span class="mobile"> portfolio item</span></a>
             <a id="nextlinktop" href="/portfolio/studio-inhout/">next item</a>
-            <a id="prevlinktop" href="/portfolio/de-babywegwijzer/">previous item</a>
+            <a id="prevlinktop" href="/portfolio/joopvdschee/">previous item</a>
         
         <a id="scrolltotop" href="#top">Scroll to top</a>
         <a id="lightmode" href="#" onclick="toggleLightmode()" title="change color"></a>
