Updated 4 files via CloudCannon

--- a/nl/portfolio/joopvdschee/index.html
+++ b/nl/portfolio/joopvdschee/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>joop van der schee | Usecue web development</title>
+<title>Joop van der Schee | Usecue web development</title>
 
 <meta name="description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i...">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="joop van der schee"/>
+<meta property="og:title" content="Joop van der Schee"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="joop van der schee" />
+<meta name="twitter:title" content="Joop van der Schee" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/" />
 <meta name="twitter:description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i..." />
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.joop.vdschee.nl/" title="View the website of joop van der schee" aria-label="View the website of joop van der schee">
+    <a href="https://www.joop.vdschee.nl/" title="View the website of Joop van der Schee" aria-label="View the website of Joop van der Schee">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/joopvdschee2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/joopvdschee1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -166,7 +166,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">joop van der schee</h1>
+<h1 class="large">Joop van der Schee</h1>
 
 <p>This website itself should <em>absolutely</em> be in my portfolio. It is <a href="/blog/a-tribute-to-the-web/">a tribute to the web</a> and is designed and coded by myself. This website is hosted on special infrastructure to get <a href="/blog/websites-that-load-instantly/">the best performance possible</a>. Most pages will load in under 0.2 seconds (from within Europe). The pages are only 41kb large and have a perfect Google score.</p>
 
