Updated 2 files via CloudCannon

--- a/portfolio/joopvdschee/index.html
+++ b/portfolio/joopvdschee/index.html
@@ -50,7 +50,7 @@
 
 <title>Joop van der Schee | Usecue web development</title>
 
-<meta name="description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i...">
+<meta name="description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications as a professor at the VU University ...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i..."/>
+<meta property="og:description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications as a professor at the VU University ..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Joop van der Schee" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/joopvdschee/" />
-<meta name="twitter:description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i..." />
+<meta name="twitter:description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications as a professor at the VU University ..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,7 +168,7 @@
 
 <h1 class="large">Joop van der Schee</h1>
 
-<p>This website itself should <em>absolutely</em> be in my portfolio. It is <a href="/blog/a-tribute-to-the-web/">a tribute to the web</a> and is designed and coded by myself. This website is hosted on special infrastructure to get <a href="/blog/websites-that-load-instantly/">the best performance possible</a>. Most pages will load in under 0.2 seconds (from within Europe). The pages are only 41kb large and have a perfect Google score.</p>
+<p>I designed and built this <a href="/blog/websites-that-load-instantly/">instantly loading website</a> for my father. The website showcases his milestones and publications as a professor at the VU University Amsterdam. Pages load in under 0.2 seconds from anywhere in the world, are only 77kb large and have a perfect Google score. The website is partly static and partly Jekyll and is available in two languages. He can update his website easily through the CloudCannon CMS.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
