--- a/nl/portfolio/joopvdschee/index.html
+++ b/nl/portfolio/joopvdschee/index.html
@@ -50,7 +50,7 @@
 
 <title>Joop van der Schee | Usecue web development</title>
 
-<meta name="description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i...">
+<meta name="description" content="Voor mijn vader heb ik deze razendsnelle website ontworpen en gebouwd. De website geeft een overzicht van zijn mijlpalen en publicaties als professor aan de ...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i..."/>
+<meta property="og:description" content="Voor mijn vader heb ik deze razendsnelle website ontworpen en gebouwd. De website geeft een overzicht van zijn mijlpalen en publicaties als professor aan de ..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Joop van der Schee" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/" />
-<meta name="twitter:description" content="This website itself should absolutely be in my portfolio. It is a tribute to the web and is designed and coded by myself. This website is hosted on special i..." />
+<meta name="twitter:description" content="Voor mijn vader heb ik deze razendsnelle website ontworpen en gebouwd. De website geeft een overzicht van zijn mijlpalen en publicaties als professor aan de ..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,7 +168,7 @@
 
 <h1 class="large">Joop van der Schee</h1>
 
-<p>This website itself should <em>absolutely</em> be in my portfolio. It is <a href="/blog/a-tribute-to-the-web/">a tribute to the web</a> and is designed and coded by myself. This website is hosted on special infrastructure to get <a href="/blog/websites-that-load-instantly/">the best performance possible</a>. Most pages will load in under 0.2 seconds (from within Europe). The pages are only 41kb large and have a perfect Google score.</p>
+<p>Voor mijn vader heb ik deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> ontworpen en gebouwd. De website geeft een overzicht van zijn mijlpalen en publicaties als professor aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0.2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het CloudCannon CMS.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
