--- a/nl/portfolio/petervermaat/index.html
+++ b/nl/portfolio/petervermaat/index.html
@@ -50,7 +50,7 @@
 
 <title>Peter Vermaat | Usecue web development</title>
 
-<meta name="description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …">
+<meta name="description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was ni...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/petervermaat/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …"/>
+<meta property="og:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was ni..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Peter Vermaat" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/petervermaat1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/petervermaat/" />
-<meta name="twitter:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …" />
+<meta name="twitter:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was ni..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,17 +168,17 @@
 
 <h1 class="large">Peter Vermaat</h1>
 
-<p>Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …</p>
+<p>Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was niet responsive en gebruikte WP Touch om toch een mobiele website weer te geven (met alle beperkingen vandien). Ik heb het thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshopje aan zijn website toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook!</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
     <div>
         <h3 class="small">Google score</h3>
-        <div class="medium">100%</div>
+        <div class="medium">97%</div>
     </div>
     <div>
         <h3 class="small">Snelheidsindex</h3>
-        <div class="medium">1.8s</div>
+        <div class="medium">2.2s</div>
     </div>
     <div>
         <h3 class="small">Paginagrootte</h3>
