--- a/portfolio/petervermaat/index.html
+++ b/portfolio/petervermaat/index.html
@@ -50,7 +50,7 @@
 
 <title>Peter Vermaat | Usecue web development</title>
 
-<meta name="description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …">
+<meta name="description" content="Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and ...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/petervermaat/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …"/>
+<meta property="og:description" content="Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and ..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Peter Vermaat" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/petervermaat1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/petervermaat/" />
-<meta name="twitter:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …" />
+<meta name="twitter:description" content="Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and ..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,17 +168,17 @@
 
 <h1 class="large">Peter Vermaat</h1>
 
-<p>Peter is dichter, verteller, poppenspeler en theatermaker. Ik heb zijn Envato WordPress thema …</p>
+<p>Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and used WP Touch to display a mobile website (with limitations). I rebuild his theme in Jekyll and connected the CloudCannon CMS. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a little webshop (including product presentations). Peter was very pleased with the end result and not unimportant: so was I!</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
     <div>
         <h3 class="small">Google score</h3>
-        <div class="medium">100%</div>
+        <div class="medium">97%</div>
     </div>
     <div>
         <h3 class="small">Speed index</h3>
-        <div class="medium">1.8s</div>
+        <div class="medium">2.2s</div>
     </div>
     <div>
         <h3 class="small">Page weight</h3>
