--- a/portfolio/joopvdschee/index.html
+++ b/portfolio/joopvdschee/index.html
@@ -50,7 +50,7 @@
 
 <title>Joop van der Schee | Usecue web development</title>
 
-<meta name="description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications as a professor at the VU University ...">
+<meta name="description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications during his work at the VU University...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications as a professor at the VU University ..."/>
+<meta property="og:description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications during his work at the VU University..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="Joop van der Schee" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/joopvdschee/" />
-<meta name="twitter:description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications as a professor at the VU University ..." />
+<meta name="twitter:description" content="I designed and built this instantly loading website for my father. The website showcases his milestones and publications during his work at the VU University..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,7 +168,7 @@
 
 <h1 class="large">Joop van der Schee</h1>
 
-<p>I designed and built this <a href="/blog/websites-that-load-instantly/">instantly loading website</a> for my father. The website showcases his milestones and publications as a professor at the VU University Amsterdam. Pages load in under 0.2 seconds from anywhere in the world, are only 77kb large and have a perfect Google score. The website is partly static and partly Jekyll and is available in two languages. He can update his website easily through the <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
+<p>I designed and built this <a href="/blog/websites-that-load-instantly/">instantly loading website</a> for my father. The website showcases his milestones and publications during his work at the VU University Amsterdam. Pages load in under 0.2 seconds from anywhere in the world, are only 77kb large and have a perfect Google score. The website is partly static and partly Jekyll and is available in two languages. He can update his website easily through the <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
