--- a/nl/portfolio/joopvdschee/index.html
+++ b/nl/portfolio/joopvdschee/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">Joop van der Schee</h1>
 
-<p>Voor mijn vader heb ik deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> ontworpen en gebouwd. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0.2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
+<p>Voor mijn vader heb ik deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> ontworpen en gebouwd. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0.2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>. Ik vind het een eer dat ik deze website heb mogen maken voor hem.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
