--- a/portfolio/joopvdschee/index.html
+++ b/portfolio/joopvdschee/index.html
@@ -168,7 +168,7 @@
 
 <h1 class="large">Joop van der Schee</h1>
 
-<p>I designed and built this <a href="/blog/websites-that-load-instantly/">instantly loading website</a> for my father. The website showcases his milestones and publications during his work at the VU University Amsterdam. Pages load in under 0.2 seconds from anywhere in the world, are only 77kb large and have a perfect Google score. The website is partly static and partly Jekyll and is available in two languages. He can update his website easily through the <a href="https://cloudcannon.com/">CloudCannon CMS</a>. It has been an honour to be able to build this website for him!</p>
+<p>I designed and built this <a href="/blog/websites-that-load-instantly/">instantly loading website</a> for my father. The website showcases his milestones and publications during his work at the VU University Amsterdam. Pages load in under 0.2 seconds from anywhere in the world, are only 77kb large and have a perfect Google score. The website is partly static and partly Jekyll and is available in two languages. He can update his website easily through the <a href="https://cloudcannon.com/">CloudCannon CMS</a>. It has been an honour to build this website for him!</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
