Updated 6 files via CloudCannon

--- a/portfolio/transactility/index.html
+++ b/portfolio/transactility/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>transactility | Usecue web development</title>
+<title>Transactility | Usecue web development</title>
 
 <meta name="description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout an...">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="transactility"/>
+<meta property="og:title" content="Transactility"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/transactility1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/transactility/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="transactility" />
+<meta name="twitter:title" content="Transactility" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/transactility1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/transactility/" />
 <meta name="twitter:description" content="This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout an..." />
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://wrinkly-bed.cloudvent.net/" title="View the website of transactility" aria-label="View the website of transactility">
+    <a href="https://wrinkly-bed.cloudvent.net/" title="View the website of Transactility" aria-label="View the website of Transactility">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/transactility2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/transactility1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -166,7 +166,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">transactility</h1>
+<h1 class="large">Transactility</h1>
 
 <p>This company (Transactility, Inc) from Florida contacted me to help them with the development of their new Jekyll website. They had created a basic layout and I rebuild and fine-tuned their website in Jekyll. The site has a great <a href="/blog/how-to-get-a-100-google-lighthouse-score/">Google Lighthouse score</a> and can be managed fully in the CloudCannon CMS. The first page is quite visually pleasing, but weighs only 260kb.</p>
 
