Updated 8 files via CloudCannon

--- a/nl/portfolio/joopvdschee/index.html
+++ b/nl/portfolio/joopvdschee/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Joop van der Schee | Usecue web development</title>
+<title>professor Joop | Usecue web development</title>
 
 <meta name="description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor van der Schee. De website geeft een overzicht van zijn mijlpalen en publicat...">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Joop van der Schee"/>
+<meta property="og:title" content="professor Joop"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Joop van der Schee" />
+<meta name="twitter:title" content="professor Joop" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/" />
 <meta name="twitter:description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor van der Schee. De website geeft een overzicht van zijn mijlpalen en publicat..." />
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.joop.vdschee.nl/" title="View the website of Joop van der Schee" aria-label="View the website of Joop van der Schee">
+    <a href="https://www.joop.vdschee.nl/" title="View the website of professor Joop" aria-label="View the website of professor Joop">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/joopvdschee2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/joopvdschee1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -166,7 +166,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">Joop van der Schee</h1>
+<h1 class="large">professor Joop</h1>
 
 <p>Deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> heb ik ontworpen en gebouwd voor mijn vader: <a href="https://nl.wikipedia.org/wiki/Joop_van_der_Schee">professor van der Schee</a>. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0.2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
 
