--- a/nl/portfolio/petervermaat/index.html
+++ b/nl/portfolio/petervermaat/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Peter Vermaat | Usecue web development</title>
+<title>dichter Vermaat | Usecue web development</title>
 
 <meta name="description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was ni...">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Peter Vermaat"/>
+<meta property="og:title" content="dichter Vermaat"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/petervermaat1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/petervermaat/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Peter Vermaat" />
+<meta name="twitter:title" content="dichter Vermaat" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/petervermaat1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/petervermaat/" />
 <meta name="twitter:description" content="Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was ni..." />
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.joop.vdschee.nl/" title="View the website of Peter Vermaat" aria-label="View the website of Peter Vermaat">
+    <a href="https://www.joop.vdschee.nl/" title="View the website of dichter Vermaat" aria-label="View the website of dichter Vermaat">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/petervermaat2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/petervermaat1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -166,7 +166,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">Peter Vermaat</h1>
+<h1 class="large">dichter Vermaat</h1>
 
 <p>Peter is dichter, verteller, poppenspeler en theatermaker. Meer dan 5 jaar geleden heb ik voor hem een Envato WordPress thema geïnstalleerd. Dat thema was niet responsive en gebruikte WP Touch om toch een mobiele website weer te geven (met alle beperkingen vandien). Hij wilde graag een update van zijn website. Ik heb het thema nagebouwd in Jekyll en heb er het CloudCannon CMS aan gekoppeld. Daarnaast heb ik zijn pixellogo omgezet naar vector, alle javascript herschreven, het thema responsive gemaakt en heb ik een webshopje aan zijn website toegevoegd (inclusief productpresentaties). Peter was zeer tevreden met het eindresultaat en niet onbelangrijk: ik ook! Deze website kan makkelijk weer 5 jaar mee.</p>
 
