--- a/portfolio/joopvdschee/index.html
+++ b/portfolio/joopvdschee/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Joop van der Schee | Usecue web development</title>
+<title>professor Joop | Usecue web development</title>
 
 <meta name="description" content="I designed and built this instantly loading website for my father: professor van der Schee. The website showcases his milestones and publications during his ...">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Joop van der Schee"/>
+<meta property="og:title" content="professor Joop"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Joop van der Schee" />
+<meta name="twitter:title" content="professor Joop" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/joopvdschee/" />
 <meta name="twitter:description" content="I designed and built this instantly loading website for my father: professor van der Schee. The website showcases his milestones and publications during his ..." />
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://www.joop.vdschee.nl/" title="View the website of Joop van der Schee" aria-label="View the website of Joop van der Schee">
+    <a href="https://www.joop.vdschee.nl/" title="View the website of professor Joop" aria-label="View the website of professor Joop">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/joopvdschee2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/joopvdschee1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -166,7 +166,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">Joop van der Schee</h1>
+<h1 class="large">professor Joop</h1>
 
 <p>I designed and built this <a href="/blog/websites-that-load-instantly/">instantly loading website</a> for my father: <a href="https://nl.wikipedia.org/wiki/Joop_van_der_Schee">professor van der Schee</a>. The website showcases his milestones and publications during his work at the VU University Amsterdam. Pages load in under 0.2 seconds from anywhere in the world, are only 77kb large and have a perfect Google score. The website is partly static and partly Jekyll and is available in two languages. He can update his website easily through the <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
 
