--- a/portfolio/petervermaat/index.html
+++ b/portfolio/petervermaat/index.html
@@ -48,7 +48,7 @@
 <!--                                                                                          -->
 <!--                                                                                          -->
 
-<title>Peter Vermaat | Usecue web development</title>
+<title>poet Vermaat | Usecue web development</title>
 
 <meta name="description" content="Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and ...">
 
@@ -59,7 +59,7 @@
 <meta id="viewport" name="viewport" content="width=device-width">
 
 <!-- Facebook and Twitter integration -->
-<meta property="og:title" content="Peter Vermaat"/>
+<meta property="og:title" content="poet Vermaat"/>
 <meta property="og:image" content="https://www.usecue.com/uploads/petervermaat1.jpg"/>
 <meta property="og:url" content="https://www.usecue.com/portfolio/petervermaat/"/>
 <meta property="og:type" content="article">
@@ -68,7 +68,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
-<meta name="twitter:title" content="Peter Vermaat" />
+<meta name="twitter:title" content="poet Vermaat" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/petervermaat1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/portfolio/petervermaat/" />
 <meta name="twitter:description" content="Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and ..." />
@@ -107,7 +107,7 @@
 
 
 <div class="fullscreen">
-    <a href="https://petervermaat.nl/" title="View the website of Peter Vermaat" aria-label="View the website of Peter Vermaat">
+    <a href="https://petervermaat.nl/" title="View the website of poet Vermaat" aria-label="View the website of poet Vermaat">
         <div class="svg">
         <svg  version="1.1" xmlns="&ns_svg;" xmlns:xlink="&ns_xlink;" width="490.63" height="302.779" viewBox="0 0 490.63 302.779" overflow="visible" enable-background="new 0 0 490.63 302.779" xml:space="preserve" style="background: url('/uploads/petervermaat2.jpg') 97.5% 48.6% / 28.5% auto no-repeat, url('/uploads/petervermaat1.jpg') 47% 48% / 63% auto no-repeat;">
             <g id="Layer_2">
@@ -166,7 +166,7 @@
 </div>
 <div id="scrolldown"></div>
 
-<h1 class="large">Peter Vermaat</h1>
+<h1 class="large">poet Vermaat</h1>
 
 <p>Peter is a poet, storyteller, puppeteer and theatre maker. Over 5 years ago I installed an Envato WordPress theme for him. That theme was not repsonsive and used WP Touch to display a mobile website (with limitations). He asked me to update his website. I rebuild his theme in Jekyll and connected the CloudCannon CMS. I also transformed his pixel logo into vectors, rewrote all javascript, made the theme responsive and added a little webshop (including product presentations). Peter was very pleased with the end result and not unimportant: so was I! This website will easily last another 5 years.</p>
 
