Updated 4 files via CloudCannon

--- a/nl/portfolio/joopvdschee/index.html
+++ b/nl/portfolio/joopvdschee/index.html
@@ -50,7 +50,7 @@
 
 <title>professor Joop | Usecue web development</title>
 
-<meta name="description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor van der Schee. De website geeft een overzicht van zijn mijlpalen en publicat...">
+<meta name="description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor Joop van der Schee. De website geeft een overzicht van zijn mijlpalen en pub...">
 
 <link rel="shortcut icon" type="image/png" href="/img/icon-196x196.png" />
 <link rel="shortcut icon" sizes="196x196" href="/img/icon-196x196.png" />
@@ -64,14 +64,14 @@
 <meta property="og:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/"/>
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="Usecue web development"/>
-<meta property="og:description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor van der Schee. De website geeft een overzicht van zijn mijlpalen en publicat..."/>
+<meta property="og:description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor Joop van der Schee. De website geeft een overzicht van zijn mijlpalen en pub..."/>
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@jhvanderschee">
 <meta name="twitter:title" content="professor Joop" />
 <meta name="twitter:image" content="https://www.usecue.com/uploads/joopvdschee1.jpg" />
 <meta name="twitter:url" content="https://www.usecue.com/nl/portfolio/joopvdschee/" />
-<meta name="twitter:description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor van der Schee. De website geeft een overzicht van zijn mijlpalen en publicat..." />
+<meta name="twitter:description" content="Deze razendsnelle website heb ik ontworpen en gebouwd voor mijn vader: professor Joop van der Schee. De website geeft een overzicht van zijn mijlpalen en pub..." />
 
 <link rel="publisher" href="https://plus.google.com/+UseCuewebdevelopmentAmsterdam">
 
@@ -168,7 +168,7 @@
 
 <h1 class="large">professor Joop</h1>
 
-<p>Deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> heb ik ontworpen en gebouwd voor mijn vader: <a href="https://nl.wikipedia.org/wiki/Joop_van_der_Schee">professor van der Schee</a>. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0.2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
+<p>Deze <a href="/blog/websites-that-load-instantly/">razendsnelle website</a> heb ik ontworpen en gebouwd voor mijn vader: <a href="https://nl.wikipedia.org/wiki/Joop_van_der_Schee">professor Joop van der Schee</a>. De website geeft een overzicht van zijn mijlpalen en publicaties tijdens zijn werk aan de Vrije Universiteit Amsterdam. De pagina’s laden in minder dan 0.2 seconden van waar ook ter wereld, zijn slechts 77kb groot en hebben een perfecte Google score. De website is deels statisch en deels Jekyll en is uitgevoerd in twee talen. Hij kan zijn website bijhouden via het <a href="https://cloudcannon.com/">CloudCannon CMS</a>.</p>
 
 
 <div class="threecols" style="padding-top: 1.1em;">
